--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Idli</a></li>
+        <li><a href="recipes/idli.html">Idli</a></li>
         <li><a href="recipes/rajma.html">Rajma</a></li>
     </ul>
     
